Se agregan cambios de comunicacion entre componentes. De componente padre a hijo mediante la directiva @input. Referencia: Comunicacion entre componentes I, video 19

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "strictPropertyInitialization": false,
+    //"strictPropertyInitialization": false,
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
