Cambios para despliegue

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "web.config",
+                "input": "src"
               }
             ],
             "styles": [
@@ -87,6 +91,10 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "web.config",
+                "input": "src"
               }
             ],
             "styles": [
